logs/scheduler.log
2025-07-24 10:42:07,227 ERROR scheduler Exception in Enqueue Events for Site travel.com
Traceback (most recent call last):
  File "/home/abhay_admin/crm-bench/apps/frappe/frappe/utils/caching.py", line 57, in wrapper
    return frappe.local.request_cache[func][args_key]
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^
KeyError: 5740354900026072187

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/abhay_admin/crm-bench/apps/frappe/frappe/utils/scheduler.py", line 102, in enqueue_events_for_site
    enqueue_events(site=site)
  File "/home/abhay_admin/crm-bench/apps/frappe/frappe/utils/scheduler.py", line 117, in enqueue_events
    all_jobs = frappe.get_all("Scheduled Job Type", filters={"stopped": 0}, fields="*")
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/abhay_admin/crm-bench/apps/frappe/frappe/__init__.py", line 2047, in get_all
    return get_list(doctype, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/abhay_admin/crm-bench/apps/frappe/frappe/__init__.py", line 2022, in get_list
    return frappe.model.db_query.DatabaseQuery(doctype).execute(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/abhay_admin/crm-bench/apps/frappe/frappe/model/db_query.py", line 191, in execute
    result = self.build_and_run()
             ^^^^^^^^^^^^^^^^^^^^
  File "/home/abhay_admin/crm-bench/apps/frappe/frappe/model/db_query.py", line 206, in build_and_run
    args = self.prepare_args()
           ^^^^^^^^^^^^^^^^^^^
  File "/home/abhay_admin/crm-bench/apps/frappe/frappe/model/db_query.py", line 246, in prepare_args
    self.build_conditions()
  File "/home/abhay_admin/crm-bench/apps/frappe/frappe/model/db_query.py", line 582, in build_conditions
    self.build_filter_conditions(self.filters, self.conditions)
  File "/home/abhay_admin/crm-bench/apps/frappe/frappe/model/db_query.py", line 600, in build_filter_conditions
    conditions.append(self.prepare_filter_condition(f))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/abhay_admin/crm-bench/apps/frappe/frappe/model/db_query.py", line 719, in prepare_filter_condition
    additional_filters_config = get_additional_filters_from_hooks()
                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/abhay_admin/crm-bench/apps/frappe/frappe/boot.py", line 410, in get_additional_filters_from_hooks
    filter_hooks = frappe.get_hooks("filters_config")
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/abhay_admin/crm-bench/apps/frappe/frappe/__init__.py", line 1619, in get_hooks
    hooks = _dict(_load_app_hooks())
                  ^^^^^^^^^^^^^^^^^
  File "/home/abhay_admin/crm-bench/apps/frappe/frappe/utils/caching.py", line 59, in wrapper
    return_val = func(*args, **kwargs)
                 ^^^^^^^^^^^^^^^^^^^^^
  File "/home/abhay_admin/crm-bench/apps/frappe/frappe/__init__.py", line 1588, in _load_app_hooks
    app_hooks = get_module(f"{app}.hooks")
                ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/abhay_admin/crm-bench/apps/frappe/frappe/__init__.py", line 1454, in get_module
    return importlib.import_module(modulename)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/importlib/__init__.py", line 90, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 935, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 991, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1129, in get_code
  File "<frozen importlib._bootstrap_external>", line 1059, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/home/abhay_admin/crm-bench/apps/travel_crm/travel_crm/hooks.py", line 42
    fixtures = [
               ^
SyntaxError: '[' was never closed
